IntelliiJ automatic code refactor and cleanup